--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,7 @@
+* {
+    font-size: 16px;
+}
+
 main {
     width: 100%;
     height: 1000px;
@@ -13,7 +17,9 @@ body {
 
 body h1 {
     margin-top: 100px;
+    font-size: 2rem;
 }
+
 .question-container {
     width: 100%;
     height: auto;
@@ -22,10 +28,13 @@ body h1 {
     grid-row: 2 / span 2;
     justify-content: center;
     text-align: center;
+    border-radius: 5%;
 }
 
 .question-container h2 {
     color: white;
+    margin-top: 5%;
+    font-size: 1.5rem;
 }
 
 .button {
